--- a/rabbitmq/src/main/resources/application.yaml
+++ b/rabbitmq/src/main/resources/application.yaml
@@ -1,1 +1,18 @@
-
+server:
+  port: 8080
+spring:
+  rabbitmq:
+    addresses: linuxserver.cn:5672
+    username: guest
+    password: guest
+    virtual-host: /
+    listener:
+      simple:
+        max-concurrency: 2
+        prefetch: 10
+        retry:
+          enabled: true
+          max-attempts: 3
+        acknowledge-mode: manual
+    publisher-confirm-type: correlated
+    publisher-returns: true
