--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>kafka</module>
         <module>rabbitmq</module>
         <module>springcloud</module>
+        <module>netty</module>
     </modules>
 
     <properties>
@@ -23,7 +24,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.boot.version>2.7.5</spring.boot.version>
+        <spring.boot.version>2.7.9</spring.boot.version>
         <spring.cloud.version>2021.0.5</spring.cloud.version>
         <spring.cloud.alibaba.version>2021.0.4.0</spring.cloud.alibaba.version>
     </properties>
