--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>rabbitmq</module>
         <module>springcloud</module>
         <module>netty</module>
+        <module>springdoc</module>
     </modules>
 
     <properties>
@@ -24,8 +25,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.boot.version>3.1.2</spring.boot.version>
-        <spring.cloud.version>2022.0.3</spring.cloud.version>
+        <spring.boot.version>3.1.3</spring.boot.version>
+        <spring.cloud.version>2022.0.4</spring.cloud.version>
         <spring.cloud.alibaba.version>2021.0.4.0</spring.cloud.alibaba.version>
     </properties>
 
@@ -52,6 +53,17 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>2.2</version>
+            </dependency>
             <dependency>
                 <groupId>cn.gonnaup.tutorial</groupId>
                 <artifactId>common</artifactId>
@@ -72,14 +84,6 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.version}</version>
-                    <configuration>
-                        <excludes>
-                            <exclude>
-                                <groupId>org.projectlombok</groupId>
-                                <artifactId>lombok</artifactId>
-                            </exclude>
-                        </excludes>
-                    </configuration>
                     <executions>
                         <execution>
                             <goals>
