--- a/springcloud/datafactory/src/main/resources/application.properties
+++ b/springcloud/datafactory/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9001
 spring.application.name=data-factory
-spring.datasource.url=jdbc:postgresql://linuxserver.cn/test
+spring.datasource.url=jdbc:postgresql://gonnaup.org/test
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
-spring.cloud.nacos.server-addr=linuxserver.cn:8848
+spring.cloud.nacos.server-addr=gonnaup.org:8848
