--- a/springcloud/datashow/src/main/resources/application.properties
+++ b/springcloud/datashow/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9002
 spring.application.name=data-show
-spring.cloud.nacos.server-addr=linuxserver.cn:8848
+spring.cloud.nacos.server-addr=gonnaup.org:8848
 spring.cloud.loadbalancer.enabled=true
 feign.okhttp.enabled=true
