--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.gonnaup</groupId>
+        <groupId>org.gonnaup</groupId>
         <artifactId>tutorial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>cn.gonnaup.tutorial</groupId>
+    <groupId>org.gonnaup.tutorial</groupId>
     <artifactId>netty</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>netty</name>
@@ -20,7 +20,7 @@
             <artifactId>netty-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>cn.gonnaup.tutorial</groupId>
+            <groupId>org.gonnaup.tutorial</groupId>
             <artifactId>common</artifactId>
         </dependency>
         <dependency>
