--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.gonnaup</groupId>
+    <groupId>org.gonnaup</groupId>
     <artifactId>tutorial</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -65,7 +65,7 @@
                 <version>2.2</version>
             </dependency>
             <dependency>
-                <groupId>cn.gonnaup.tutorial</groupId>
+                <groupId>org.gonnaup.tutorial</groupId>
                 <artifactId>common</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
