--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.gonnaup</groupId>
+        <groupId>org.gonnaup</groupId>
         <artifactId>tutorial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>cn.gonnaup.tutorial</groupId>
+    <groupId>org.gonnaup.tutorial</groupId>
     <artifactId>rabbitmq</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>rabbitmq</name>
@@ -16,7 +16,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.gonnaup.tutorial</groupId>
+            <groupId>org.gonnaup.tutorial</groupId>
             <artifactId>common</artifactId>
         </dependency>
         <dependency>
