--- a/springcloud/datafactory/pom.xml
+++ b/springcloud/datafactory/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.gonnaup.tutorial</groupId>
+        <groupId>org.gonnaup.tutorial</groupId>
         <artifactId>springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>cn.gonnaup.tutorial.springcloud</groupId>
+    <groupId>org.gonnaup.tutorial.springcloud</groupId>
     <artifactId>datafactory</artifactId>
     <name>datafactory</name>
 
@@ -40,7 +40,7 @@
         </dependency>
 
         <dependency>
-            <groupId>cn.gonnaup.tutorial</groupId>
+            <groupId>org.gonnaup.tutorial</groupId>
             <artifactId>common</artifactId>
         </dependency>
 
