--- a/springcloud/datashow/pom.xml
+++ b/springcloud/datashow/pom.xml
@@ -6,12 +6,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <parent>
-        <groupId>cn.gonnaup.tutorial</groupId>
+        <groupId>org.gonnaup.tutorial</groupId>
         <artifactId>springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>cn.gonnaup.tutorial.springcloud</groupId>
+    <groupId>org.gonnaup.tutorial.springcloud</groupId>
     <artifactId>datashow</artifactId>
     <name>datashow</name>
 
@@ -42,7 +42,7 @@
         </dependency>
 
         <dependency>
-            <groupId>cn.gonnaup.tutorial</groupId>
+            <groupId>org.gonnaup.tutorial</groupId>
             <artifactId>common</artifactId>
         </dependency>
     </dependencies>
