--- a/springcloud/entry/pom.xml
+++ b/springcloud/entry/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <version>1.0-SNAPSHOT</version>
     <parent>
-        <groupId>cn.gonnaup.tutorial</groupId>
+        <groupId>org.gonnaup.tutorial</groupId>
         <artifactId>springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>cn.gonnaup.tutorial.springcloud</groupId>
+    <groupId>org.gonnaup.tutorial.springcloud</groupId>
     <artifactId>entry</artifactId>
     <name>entry</name>
 
