--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.gonnaup</groupId>
+        <groupId>org.gonnaup</groupId>
         <artifactId>tutorial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>cn.gonnaup.tutorial</groupId>
+    <groupId>org.gonnaup.tutorial</groupId>
     <artifactId>springcloud</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
