--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>org.gonnaup.tutorial</groupId>
     <artifactId>common</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <name>common</name>
 
     <dependencies>
@@ -63,5 +64,18 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
