--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.gonnaup.tutorial</groupId>
     <artifactId>common</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>common</name>
 
     <dependencies>
