--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>springcloud</module>
         <module>netty</module>
         <module>springdoc</module>
+        <module>redis</module>
     </modules>
 
     <properties>
@@ -25,18 +26,18 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <spring.boot.version>3.2.0</spring.boot.version>
-        <spring.cloud.version>2022.0.4</spring.cloud.version>
+        <spring.boot.version>3.3.3</spring.boot.version>
+        <spring.cloud.version>2023.0.3</spring.cloud.version>
         <spring.cloud.alibaba.version>2021.0.4.0</spring.cloud.alibaba.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <mapstruct.version>1.6.0</mapstruct.version>
         <snakeyaml.version>2.2</snakeyaml.version>
-        <springdoc.mvn.ui.version>2.2.0</springdoc.mvn.ui.version>
+        <springdoc.mvn.ui.version>2.6.0</springdoc.mvn.ui.version>
         <javafaker.version>1.0.2</javafaker.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
-        <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
+        <mybatis-plus-boot-starter.version>3.5.7</mybatis-plus-boot-starter.version>
     </properties>
 
     <dependencyManagement>
@@ -90,7 +91,7 @@
             <dependency>
                 <groupId>org.gonnaup.tutorial</groupId>
                 <artifactId>common</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.javafaker</groupId>
